--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "server": "cd ../pgJWT && npm run dev",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
